# solver-verifier

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_test.py  main.py  pyproject.toml  test_llm.py  test_no_llm.py  test_upload.py
.claude/: settings.local.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  USER_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/components/: FileUploader.tsx  ProgressDisplay.tsx  ResultsDisplay.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: HomePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
prompts/: analyzer_prompt.txt  analyzer_prompt_backup.txt  verifier_prompt.txt
rejected_output/: 123_20250816_192441_rejected_2bc5437b.json  123_20250816_193448_rejected_05989540.json  RFP_Analysis_20250816_195344_20250816_195447_rejected_11086a06.json
scripts/: build-frontend.sh
solver_verifier/api/: pipeline_router.py
solver_verifier/models/: agent_config.py  business_requirement.py  progress.py
solver_verifier/services/: analyzer_service.py  document_parser.py  llm_service.py  pipeline_service.py  prompt_loader.py  verifier_service.py  websocket_manager.py
